Project

General

Profile

Actions

Bug #14262

closed

ArgumentError (negative level (-1)) when `warn "test message", uplevel: -2`

Bug #14262: ArgumentError (negative level (-1)) when `warn "test message", uplevel: -2`

Added by znz (Kazuhiro NISHIYAMA) over 8 years ago. Updated over 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.0dev (2017-12-30 trunk 61515) [x86_64-darwin16]
[ruby-core:84568]

Description

When uplevel: -2, error message says negative level (-1).
When uplevel: -1, no exception occur.
What is expected behavior?

% irb -r irb/completion --simple-prompt
>> warn("test", uplevel: -1)
(irb):1: warning: test
=> nil
>> warn("test", uplevel: -2)
Traceback (most recent call last):
        3: from bin/irb:11:in `<main>'
        2: from (irb):2
        1: from (irb):2:in `warn'
ArgumentError (negative level (-1))
>> warn("test", uplevel: 0)
(irb):3: warning: test
=> nil
>> warn("test", uplevel: 1)

Related issues 1 (0 open — 1 closed)

Related to Ruby - Feature #12882: Add caller/file/line information to internal Kernel#warn callsClosedmatz (Yukihiro Matsumoto)Actions
Actions

Also available in: PDF Atom